--- a/jeeves.cabal
+++ b/jeeves.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       Lib
       RTMInterface
+      RTMTypes
       Scheduler
   other-modules:
       Paths_jeeves
@@ -42,6 +43,7 @@ library
     , modern-uri
     , req
     , sort
+    , template-haskell
     , text
     , transformers-either
   default-language: Haskell2010
@@ -64,6 +66,7 @@ executable jeeves-exe
     , modern-uri
     , req
     , sort
+    , template-haskell
     , text
     , transformers-either
   default-language: Haskell2010
@@ -74,6 +77,7 @@ test-suite integration-test
   other-modules:
       Lib
       RTMInterface
+      RTMTypes
       Scheduler
       Paths_jeeves
   hs-source-dirs:
@@ -91,6 +95,7 @@ test-suite integration-test
     , modern-uri
     , req
     , sort
+    , template-haskell
     , text
     , transformers-either
   default-language: Haskell2010
@@ -102,6 +107,7 @@ test-suite unit-test
       SchedulerSpec
       Lib
       RTMInterface
+      RTMTypes
       Scheduler
       Paths_jeeves
   hs-source-dirs:
@@ -119,6 +125,7 @@ test-suite unit-test
     , modern-uri
     , req
     , sort
+    , template-haskell
     , text
     , transformers-either
   default-language: Haskell2010
