--- a/jeeves.cabal
+++ b/jeeves.cabal
@@ -40,6 +40,7 @@ library
       HUnit
     , MissingH
     , aeson
+    , async
     , base >=4.7 && <5
     , bytestring
     , cryptohash-md5
@@ -53,6 +54,8 @@ library
     , template-haskell
     , text
     , transformers-either
+    , warp
+    , yesod
   default-language: Haskell2010
 
 executable jeeves-exe
@@ -66,6 +69,7 @@ executable jeeves-exe
       HUnit
     , MissingH
     , aeson
+    , async
     , base >=4.7 && <5
     , bytestring
     , cryptohash-md5
@@ -80,6 +84,8 @@ executable jeeves-exe
     , template-haskell
     , text
     , transformers-either
+    , warp
+    , yesod
   default-language: Haskell2010
 
 test-suite integration-test
@@ -103,6 +109,7 @@ test-suite integration-test
       HUnit
     , MissingH
     , aeson
+    , async
     , base >=4.7 && <5
     , bytestring
     , cryptohash-md5
@@ -117,6 +124,8 @@ test-suite integration-test
     , template-haskell
     , text
     , transformers-either
+    , warp
+    , yesod
   default-language: Haskell2010
 
 test-suite unit-test
@@ -140,6 +149,7 @@ test-suite unit-test
       HUnit
     , MissingH
     , aeson
+    , async
     , base >=4.7 && <5
     , bytestring
     , cryptohash-md5
@@ -154,4 +164,6 @@ test-suite unit-test
     , template-haskell
     , text
     , transformers-either
+    , warp
+    , yesod
   default-language: Haskell2010
